k8s/deployment/ui/canary/canary-versionv2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-ui
  namespace: demo
spec:
  hosts:
    - simple-ui.demo.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /
          headers:
            cookie:
              regex: ^(.*?;)?(version=v2)(;.*)?$
      route:
        - destination:
            host: simple-ui
            subset: v2
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: simple-ui
            subset: v1
